@@ -4,7 +4,7 @@
 
 Name:				davix
 Version:			0.2.6
-Release:			1%{?dist}
+Release:			2%{?dist}
 Summary:			Toolkit for Http-based file management
 Group:				Applications/Internet
 License:			LGPLv2+
