@@ -1,3 +1,6 @@
+Trunk :
+ - Prototype for pwrite
+
 Version - 0.2.5
 - support for S3 auth tokens
 - add external gtest support
